[tool.poetry]
name = "django-scylla"
version = "0.0.2"
description = "Django Scylla"
authors = ["Rafał Furmański <r.furmanski@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/r4fek/django-scylla"
repository = "https://github.com/r4fek/django-scylla"
documentation = "https://django-scylla.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [{ include = "django_scylla" }]

[tool.poetry.urls]
Changelog = "https://github.com/r4fek/django-scylla/releases"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0 || ^4.0 || ^4.1"
scylla-driver = "^3.25"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
freezegun = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"

[build-system]
requires = ["poetry>=1.1.12"]
build-backend = "poetry.masonry.api"
